version/0.17/_sources/api/solver/_autosummary/settings/phase_8.rst.txt
:orphan:

.. _phase_8:

phase
=====

.. autoclass:: ansys.fluent.core.solver.settings_232.phase_8.phase
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`phase_child <phase_child_8>`


.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`interior_child <interior_child>`       'child_object_type' of interior.

======================================   ====================================

